# gix-arena

./: CMakeLists.txt  CMakePresets.json
examples/: CMakeLists.txt  example.c
src/: CMakeLists.txt  gix_arena_impl.c  gix_arena_version.c
src/include/gix_arena/: gix_arena.h
src/include/gix_arena/core/: gix_arena_impl.h  gix_arena_version.h
src/include/gix_arena/utils/: gix_arena_define.h  gix_arena_platform.h
